k8s/30-deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: conta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo
        ports:
        - containerPort: 27017
          name: service
        volumeMounts:
          - name: data
            mountPath: /data/db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mongodb-pvc
