k8s/33-deployment-node-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter
  namespace: conta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter-container
        image: prom/node-exporter:latest
        ports:
        - containerPort: 9100
          name: service
