k8s/35-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conta-api
  namespace: conta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conta-api
  template:
    metadata:
      labels:
        app: conta-api
    spec:
      containers:
      - name: conta-api
        image: registry.io.bb.com.br:3389/box/api:0.0.1
        ports:
        - containerPort: 3443
      imagePullSecrets:
       - name: registrysecretkey
