k8s/38-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: conta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.io.bb.com.br:3389/box/web:latest
        ports:
        - containerPort: 3000
