k8s/20-service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: conta
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
