k8s/21-service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: conta
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - name: grafana
    port: 80
    protocol: TCP
    targetPort: 3000
