k8s/22-service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: conta
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
  - name: prometheus
    port: 9090
    protocol: TCP
    targetPort: 9090
