k8s/23-service-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: conta
spec:
  type: ClusterIP
  selector:
    app: node-exporter
  ports:
  - name: node-exporter
    port: 9100
    protocol: TCP
    targetPort: 9100
