k8s/24-service-mongodb-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter-service
  namespace: conta
spec:
  type: ClusterIP
  selector:
    app: mongodb-exporter
  ports:
  - name: mongodb-exporter
    port: 9001
    protocol: TCP
    targetPort: 9001
