k8s/25-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: conta
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: conta-api
  ports:
  - name: conta-api
    port: 80
    targetPort: 3443
