k8s/27-service-swagger.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-service
  namespace: conta
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: swagger
  ports:
  - name: swagger
    port: 80
    targetPort: 8080
