k8s/28-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: conta
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: web
  ports:
  - name: web
    port: 80
    targetPort: 3000
