k8s/41-ingress-interno-grafana.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conta
  name: grafana-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: grafana.conta.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 80
  tls:
  - hosts:
    - api.conta.io.bb.com.br
    secretName: conta-io-tls
