k8s/42-ingress-interno-prometheus.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conta
  name: prometheus-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: prometheus.conta.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 9090
  tls:
  - hosts:
    - api.conta.io.bb.com.br
    secretName: conta-io-tls
