k8s/43-ingress-interno-node-exporter.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conta
  name: node-exporter-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: api.conta.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: node-exporter-service
          servicePort: 9100
