k8s/44-ingress-interno-mongodb-exporter.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conta
  name: mongodb-exporter-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: conta.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: mongodb-exporter-service
          servicePort: 9001
  tls:
  - hosts:
    - api.conta.io.bb.com.br
    secretName: conta-io-tls
