k8s/48-ingress-externo-web.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conta
  name: web-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-externo"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: web.conta.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
  tls:
  - hosts:
    - api.conta.io.bb.com.br
    secretName: conta-io-tls
